manifests/local-staging/harbor/service-entry-harbor.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: harbor-service-entry
  namespace: istio-system
spec:
  hosts:
    - "harbor.staging.local"
  location: MESH_INTERNAL
  resolution: DNS
  ports:
    - name: http
      number: 8081 # this is the istio ingress gateway port not the fucking app port 
      protocol: HTTP
    - name: https
      number: 44301 # this is the istio ingress gateway port not the fucking app port 
      protocol: HTTPS
