manifests/local-staging/harbor/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: harbor-vs
  namespace: istio-system
spec:
  hosts:
    - "harbor.staging.local"
  gateways:
    - istio-ingressgateway-staging
  http:
    - match:
        - uri:
            prefix: "/api/"
      route:
        - destination:
            host: harbor-staging-core.harbor.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: "/c/"
      route:
        - destination:
            host: harbor-staging-core.harbor.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: "/chartrepo/"
      route:
        - destination:
            host: harbor-staging-core.harbor.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: "/service/"
      route:
        - destination:
            host: harbor-staging-core.harbor.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: "/v1/"          
      route:
        - destination:
            host: harbor-staging-registry.harbor.svc.cluster.local
            port:
              number: 5000              
    - match:
        - uri:
            prefix: "/v2/"          
      route:
        - destination:
            host: harbor-staging-registry.harbor.svc.cluster.local
            port:
              number: 5000              
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: harbor-staging-portal.harbor.svc.cluster.local
            port:
              number: 80
